# pages-app

./: .gitignore  pyproject.toml
config/: settings.py
templates/: base.html
