[tool.poetry]
name = "django-pages-project"
version = "0.1.0"
description = "learning project to train with django & poetry"
authors = ["Francesco <cicciodb@hotmail.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
